--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -2004,14 +2004,14 @@ progress {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
+  /* background-color: #fff; */
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  /* border: 1px solid #ced4da; */
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   border-radius: 0.375rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  /* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
 }
 @media (prefers-reduced-motion: reduce) {
   .form-control {
@@ -2574,9 +2574,9 @@ textarea.form-control-lg {
   color: #212529;
   text-align: center;
   white-space: nowrap;
-  background-color: #e9ecef;
-  border: 1px solid #ced4da;
-  border-radius: 0.375rem;
+  /* background-color: #e9ecef; */
+  /* border: 1px solid #ced4da;
+  border-radius: 0.375rem; */
 }
 
 .input-group-lg > .form-control,
@@ -10969,6 +10969,13 @@ textarea.form-control-lg {
   .size-inputbox-long{
     width: 52.438rem !important;
     height: 4.625rem !important;
+  }
+  .size-icon{
+    font-size: 1.5rem !important;
+    
+  }
+  .fs-16px {
+    font-size: 1rem !important;
   }
 /* sizes  */
 
