--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -10983,6 +10983,11 @@ textarea.form-control-lg {
   }
 /* sizes  */
 
+/* transform  */
+.rotate-45{
+  transform: rotate(-45deg);
+}
+
 /* custom css  */
 
 /*# sourceMappingURL=bootstrap.css.map */
