--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -19,6 +19,19 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+/* colors */
+  --vt-c-white: #FFFFFF;
+  --vt-c-indigo: #6A00FF;
+  --vt-c-black: #000000;
+  --vt-c-ghost-white: #F3F6FF;
+  --vt-c-lavender-blue: #C6C7F9;
+  --vt-c-cornflower-blue: #7E9FFF;
+  --vt-c-dim-gray:#666666;
+  --vt-c-dark-gray: #ACACAC;
+  --vt-c-purple-heart: #5500CD;
+  --vt-c-eucalyptus: #27AE60;
+  --vt-c-valencia: #DB524E;
+
 }
 
 /* semantic color variables for this project */
