--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -19,6 +19,64 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+/* colors */
+  --vt-c-white: #FFFFFF;
+  --vt-c-indigo: #6A00FF;
+  --vt-c-black: #000000;
+  --vt-c-ghost-white: #F3F6FF;
+  --vt-c-lavender-blue: #C6C7F9;
+  --vt-c-cornflower-blue: #7E9FFF;
+  --vt-c-dim-gray:#666666;
+  --vt-c-dark-gray: #ACACAC;
+  --vt-c-purple-heart: #5500CD;
+  --vt-c-eucalyptus: #27AE60;
+  --vt-c-valencia: #DB524E;
+
+  /* colors */
+  --vt-c-black: #000000;
+  --vt-c-dark-gray:#666666;
+  --vt-c-white: #FFFFFF;
+  --vt-c-ghost-white: #F3F6FF;
+  --vt-c-dim-gray: #ACACAC;
+  --vt-c-lavender-blue: #C6C7F9;
+  --vt-c-cornflower-blue: #6A90FF;
+  --vt-c-frenchsky-blue:#7E9FFF;
+  --vt-c-indigo: #6A00FF;
+  --vt-c-purple-heart: #5500CD;
+  --vt-c-eucalyptus: #27AE60;
+  --vt-c-valencia: #DB524E;
+   /* colors */
+   
+  /* sizes  */
+  --c-size-4px:0.25rem;
+  --c-size-5px:0.313rem;
+  --c-size-10px:0.625rem;
+  --c-size-12px:0.75rem;
+  --c-size-20px:1.25rem;
+  --c-size-24px:1.5rem;
+  --c-size-30px:1.875rem;
+  --c-size-40px:2.5rem;
+  --c-size-50px:3.125rem;
+  --c-size-60px:3.75rem;
+  --c-size-70px:4.375rem;
+  --c-size-80px:5rem;
+  --c-size-90px:5.625rem;
+  --c-size-100px:6.25rem;
+  /* sizes  */
+
+  /* fonts */
+  --c-font-styles-gotham: font-family: 'Gotham';
+  --c-font-styles-roboto: font-family: 'Roboto';
+  /* fonts */
+  /* font size  */
+  --c-font-size-13px:0.813rem;
+  --c-font-size-16px:1rem;
+  --c-font-size-23px:1.438rem;
+  /* font size  */
+
+  /* border radius  */
+  --c-border-radius-4px:border-radius: 0.25rem;
+  /* border radius  */
 }
 
 /* semantic color variables for this project */
@@ -66,7 +124,7 @@ body {
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
