--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -10908,7 +10908,7 @@ a{
   text-decoration:none !important; 
 }
 
-/* colors  */
+/* custom-colors  */
 /* samples  */
   /* .text-black {
     --bs-text-opacity: 1;
@@ -10941,10 +10941,18 @@ a{
 .color-table-pagination-text{
   color:#6E41E2;
 }
+.color-component-default-bg{
+  background: var(--vt-c-indigo);
+}
+.color-component-default-text{
+  color: var(--vt-c-white);
+}
+.color-component-disabled-bg{
+  background-color: var(--vt-c-dim-gray);
+}
+/* custom-colors  */
 
-/* colors  */
-
-/* Border Styles  */
+/* custom-Border-Styles  */
   .bor-style-none{
     border-style: none !important;
   }
@@ -10964,7 +10972,13 @@ a{
     border-color: #6E41E2;
     border-style: solid;
   }
-/* Border Styles  */
+  .bor-style-admin{
+    border: 2px dashed #7E9FFF;
+  }
+  .bor-style-consumer{
+    border: 2px dashed #6E41E2;
+  }
+/* custom-Border-Styles  */
 
 /* inputbox  */
 /* inputbox-error  */
@@ -10972,7 +10986,7 @@ a{
 /* inputbox-error  */
 /* inputbox  */
 
-/* margin  */
+/* custom-margin  */
   .m-10px{
     margin: 0.625rem !important;
   }
@@ -10995,11 +11009,20 @@ a{
     margin-right: auto;
     margin-left: auto;
   }
+  .ms-60px{
+    margin-left:3.75rem
+  }
+  .mt-et-190px{
+    margin-top: 190px 
+  }
+  .mt-et-230px{
+    margin-top: 14.375rem;
+  }
 
 
-/* margin  */
+/* custom-margin  */
 
-/* padding  */
+/* custom-padding  */
 .px-20px{
   padding-right: 1.25rem !important;
   padding-left: 1.25rem !important;
@@ -11010,9 +11033,21 @@ a{
 .pe-20px{
   padding-right: 1.25rem !important;
 }
-/* padding  */
+.py-10px {
+  padding: 0.25rem !important;
+}
+.py-10px {
+  padding-right: 0.625rem !important;
+  padding-left: 0.625rem !important;
+}
+.px-20px{
+  padding-right: 1.25rem !important;
+  padding-left: 1.25rem !important;
+}
 
-/* sizes  */
+/* custom-padding  */
+
+/* custom-sizes  */
   .square-colors-size{
     height: 4.813rem;
     width: 4.813rem;
@@ -11023,7 +11058,7 @@ a{
   }
   .size-table{
     width: 46.188rem;
-    height: 52.875rem;
+    height: 48.875rem;
   }
   .size-inputbox-admin{
     width: 25rem !important;
@@ -11051,6 +11086,10 @@ a{
     width: 3.063rem;
     border-radius: 0.25rem;
   }
+  .size-inputbox-container{
+    height: 66rem; 
+    width: 60rem;
+  }
   .size-icon{
     font-size: 1rem !important;
   }
@@ -11060,6 +11099,10 @@ a{
   .size-icon-table-arrow{
     height: 0.326rem;
     width: 0.599rem;
+  }
+  .size-table-container{
+    width: 86.688rem;
+    height: 68rem;
   }
   .size-box-10{
     height: 0.625rem;
@@ -11072,14 +11115,19 @@ a{
   .fs-16px {
     font-size: 1rem !important;
   }
-/* sizes  */
+  .size-component-default-button-1{
+    width: 5.75rem;
+    height: 2.75rem;
+  }
+/* custom-sizes  */
 
-/* transform  */
+/* custom-transform  */
 .rotate-45{
   transform: rotate(-45deg);
 }
+/* custom-transform  */
 
-/* table  */
+/* custom-table  */
 .table-custom {
   --bs-table-color: var(--bs-body-color);
   --bs-table-bg: transparent;
@@ -11097,9 +11145,12 @@ a{
   vertical-align: top;
   border-color: var(--bs-table-border-color);
 }
-/* table  */
+.table-border-dot{
+  height: 33.75rem; border-style: dotted !important;
+}
+/* custom-table  */
 
-/* fonts  */
+/* custom-fonts  */
 .font-tablename{
   font-family: 'Gotham';
   font-style: normal;
@@ -11144,8 +11195,13 @@ a{
   font-size: 16px;
   color: #000000;
 }
-/* fonts  */
-
+.font-component-roboto-white-16px{
+  color: var(--vt-c-white);
+  font-family: var(--c-font-styles-roboto);
+  font-size: var(--c-font-size-16px);
+  text-align: center;
+}
+/* custom-fonts  */
 /* custom css  */
 
 /*# sourceMappingURL=bootstrap.css.map */
