changes in typo, icons, modal

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,9 @@
 @import './base.css';
-@import './css/bootstrap.css';
+@import './css/bootstrap/bootstrap.css';
 @import './vuesax.css';
+@import './css/typography.css';
+@import './css/color-iconography.css';
+@import './css/modal.css';
 
 
 #app {
