--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -19,6 +19,63 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+  /* colors */
+  --vt-c-black: #000000;
+  --vt-c-dark-gray:#666666;
+  --vt-c-white: #FFFFFF;
+  --vt-c-ghost-white: #F3F6FF;
+  --vt-c-white-smoke: #F4F4F4;
+  --vt-c-dim-gray: #ACACAC;
+  --vt-c-light-gray:#e6e6e6 ;
+  --vt-c-lavender-blue: #C6C7F9;
+  --vt-c-cornflower-blue: #6A90FF;
+  --vt-c-frenchsky-blue:#7E9FFF;
+  --vt-c-indigo: #6A00FF;
+  --vt-c-purple-heart: #5500CD;
+  --vt-c-eucalyptus: #27AE60;
+  --vt-c-valencia: #DB524E;
+  /* colors */
+
+  /* sizes  */
+  --c-size-2px:0.125rem;
+  --c-size-4px:0.25rem;
+  --c-size-5px:0.313rem;
+  --c-size-7px:0.438rem;
+  --c-size-10px:0.625rem;
+  --c-size-11px:0.688rem;
+  --c-size-12px:0.75rem;
+  --c-size-13px:0.813rem;
+  --c-size-15px:0.938rem;
+  --c-size-16px:1rem;
+  --c-size-20px:1.25rem;
+  --c-size-30px:1.875rem;
+  --c-size-24px:1.5rem;
+  --c-size-30px:1.875rem;
+  --c-size-40px:2.5rem;
+  --c-size-44px:2.75rem;
+  --c-size-50px:3.125rem;
+  --c-size-60px:3.75rem;
+  --c-size-70px:4.375rem;
+  --c-size-80px:5rem;
+  --c-size-90px:5.625rem;
+  --c-size-100px:6.25rem;
+  --c-size-152px:9.5rem;
+  /* sizes  */
+
+  /* fonts */
+  --c-font-styles-gotham: font-family: 'Gotham';
+  --c-font-styles-roboto: font-family: 'Roboto';
+  /* fonts */
+  /* font size  */
+  --c-font-size-13px:0.813rem;
+  --c-font-size-16px:1rem;
+  --c-font-size-23px:1.438rem;
+  /* font size  */
+
+  /* border radius  */
+  --c-border-radius-4px:border-radius: 0.25rem;
+  /* border radius  */
 }
 
 /* semantic color variables for this project */
