--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -2027,7 +2027,6 @@ progress {
 }
 .form-control:focus {
   color: #212529;
-  background-color: #fff;
   /* border-color: #86b7fe; */
   outline: 0;
   /* box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25); */
@@ -2281,29 +2280,35 @@ textarea.form-control-lg {
   color-adjust: exact;
   print-color-adjust: exact;
 }
+
 .form-check-input[type=checkbox] {
   border-radius: 0.25em;
 }
 .form-check-input[type=radio] {
   border-radius: 50%;
+  background-color: var(--vt-c-gray);
+  /* border-color: var(--vt-c-gray); */
 }
 .form-check-input:active {
-  filter: brightness(90%);
+  /* filter: brightness(90%); */
+  background-color: var(--vt-c-lavender-web);
 }
-.form-check-input:focus {
+/* .form-check-input:focus {
   border-color: #86b7fe;
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-}
+} */
 .form-check-input:checked {
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: var(--vt-c-indigo);
+  /* border-color: var(--vt-c-dim-gray); */
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+  
 }
 .form-check-input:checked[type=radio] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
+  /* background-color: var(--vt-c-indigo); */
 }
 .form-check-input[type=checkbox]:indeterminate {
   background-color: #0d6efd;
@@ -2327,6 +2332,7 @@ textarea.form-control-lg {
   width: 2em;
   margin-left: -2.5em;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");
+  background-color: var(--vt-c-white);
   background-position: left center;
   border-radius: 2em;
   transition: background-position 0.15s ease-in-out;
@@ -2337,11 +2343,13 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2386b7fe'/%3e%3c/svg%3e");
+  /* background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2386b7fe'/%3e%3c/svg%3e"); */
+  
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+  background-color:var(--vt-c-indigo);
 }
 .form-switch.form-check-reverse {
   padding-right: 2.5em;
@@ -2574,8 +2582,8 @@ textarea.form-control-lg {
   line-height: 1.5;
   color: #212529;
   text-align: center;
-  white-space: nowrap;
-  /* background-color: #e9ecef; */
+  /* white-space: nowrap; */
+  background-color: transparent;
   /* border: 1px solid #ced4da;
   border-radius: 0.375rem; */
 }
@@ -10940,6 +10948,9 @@ a{
 }
 .color-table-pagination-text{
   color:#6E41E2;
+  font-style: normal;
+  font-weight:200;
+  font-size: 16px;
 }
 .color-component-default-bg{
   background: var(--vt-c-indigo);
@@ -11018,6 +11029,11 @@ a{
   .mt-et-230px{
     margin-top: 14.375rem;
   }
+  .ms-165px{
+    margin-left: 10.313rem;
+  }
+
+
 
 
 /* custom-margin  */
@@ -11204,4 +11220,24 @@ a{
 /* custom-fonts  */
 /* custom css  */
 
+.table-overflow-size{
+  height:30.75rem;
+}
 /*# sourceMappingURL=bootstrap.css.map */
+.text-align-left{
+
+}
+.column {
+  flex: 50%;
+  padding: 5px;
+}
+.icon-position{
+  position: relative;
+  left: 23.125rem;
+  bottom: 2.188rem;
+}
+.icon-position-long{
+  position: relative;
+   left: 50rem;
+   bottom: 0.625rem;
+}
