--- a/src/assets/css/bootstrap/bootstrap.css
+++ b/src/assets/css/bootstrap/bootstrap.css
@@ -7224,7 +7224,13 @@ textarea.form-control-lg {
 .border-bottom-0 {
   border-bottom: 0 !important;
 }
+.border-bottom-1 {
+  border-bottom: 3px solid;
+}
 
+.border-top-1{
+  border-bottom: 3px solid;
+}
 .border-start {
   border-left: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
 }
@@ -10923,9 +10929,6 @@ a{
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-error-rgb), var(--bs-bg-opacity)) !important;
 }
-.violet{
-  color: #6A00FF;
-}
 .bg-red{
   background-color: #DB524E;
 }
@@ -11144,8 +11147,11 @@ a{
   font-size: 16px;
   color: #000000;
 }
-/* fonts  */
 
-/* custom css  */
+.icon-size{
+  font-size: 1.25rem !important;
+}
 
-/*# sourceMappingURL=bootstrap.css.map */
+.icon-size1{
+  font-size: 4.375rem !important;
+}
