--- a/src/assets/component-button.css
+++ b/src/assets/component-button.css
@@ -56,8 +56,8 @@
     font-size: var(--c-size-16px);
     line-height: var(--c-size-15px);
     text-align: center;
-    padding-top: var(--c-size-7px);
-    padding-bottom: var(--c-size-11px);
+    padding-top: var(--c-size-5px);
+    /* padding-bottom: var(--c-size-11px); */
     margin-left: var(--c-size-10px);
     margin-right: var(--c-size-10px);
     margin-top: var(--c-size-10px);
@@ -68,6 +68,7 @@
     font-family: 'Gotham';
     font-weight: 400;
     font-size: var(--c-size-13px);
+    font-weight: 700;
     line-height: var(--c-size-15px);
     text-align: center;
     padding-top: var(--c-size-7px);
