--- a/src/assets/css/bootstrap/bootstrap.css
+++ b/src/assets/css/bootstrap/bootstrap.css
@@ -11148,8 +11148,9 @@ a{
   color: #000000;
 }
 
+/* icons */
 .icon-size{
-  font-size: 1.25rem !important;
+  font-size: 1.5rem !important;
 }
 
 .icon-size1{
