--- a/src/assets/css/color-iconography.css
+++ b/src/assets/css/color-iconography.css
@@ -10,7 +10,8 @@
     line-height: 29px;
     display: flex;
     align-items: center;
-    color: #000000;  
+    color: #000000; 
+    border-color: var(--vt-c-black);             
 }
 
 .iconography{
@@ -20,7 +21,8 @@
     line-height: 29px;
     display: flex;
     align-items: center;
-    color: #000000;  
+    color: #000000; 
+    border-color: var(--vt-c-black);             
 }
 
 .container3{
