fixed issue in button component

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,7 @@
 @import './css/typography.css';
 @import './css/color-iconography.css';
 @import './css/modal.css';
+@import './css/components-button.css';
 
 
 #app {
