--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,12 @@
 /* color palette from <https://github.com/vuejs/theme> */
+@font-face {
+  font-family: Roboto;
+  src: url(./fonts/Roboto/Roboto-Regular.ttf);
+}
+@font-face {
+  font-family: Gotham;
+  src: url(./fonts/Gotham-Font/GothamBook.ttf);
+}
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
@@ -35,6 +43,18 @@
   --vt-c-purple-heart: #5500CD;
   --vt-c-eucalyptus: #27AE60;
   --vt-c-valencia: #DB524E;
+  --vt-c-light-lavender:#e7d6ff; 
+  --vt-c-dark-valencia:#C2423E;
+  --vt-c-lavender-web:#e8e0fa;
+  --vt-c-pale-lavender:#dacff7;
+  --vt-c-misty-rose:#F9E3E3;
+  --vt-c-champagne-pink:#F6D4D3;
+  --vt-c-chinese-green:#DCF2E5;
+  --vt-c-columbia-green:#C9EAD7;
+  --vt-c-platinum:#E5E5E5;
+  --vt-c-venitian-red:#CC1512;
+  --vt-c-sea-green:#219050;
+  --vt-c-gray:#cccccc;
   /* colors */
 
   /* sizes  */
