--- a/src/assets/css/bootstrap/bootstrap.css
+++ b/src/assets/css/bootstrap/bootstrap.css
@@ -165,11 +165,6 @@ h6, .h6 {
   font-size: 1rem;
 }
 
-p {
-  /* margin-top: 0; */
-  /* margin-bottom: 1rem; */
-}
-
 abbr[title] {
   -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
@@ -11148,8 +11143,9 @@ a{
   color: #000000;
 }
 
+/* icons */
 .icon-size{
-  font-size: 1.25rem !important;
+  font-size: 1.5rem !important;
 }
 
 .icon-size1{
