--- a/src/assets/css/color-iconography.css
+++ b/src/assets/css/color-iconography.css
@@ -3,6 +3,28 @@
     height: 573px
 }
 
+.color{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    color: #000000; 
+    border-color: var(--vt-c-black);             
+}
+
+.iconography{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    color: #000000; 
+    border-color: var(--vt-c-black);             
+}
+
 .container3{
     width: 417px; 
     height: 803px;
@@ -24,8 +46,7 @@
     background: #6A00FF; 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.08);
     border-radius: 4px;      
-    border-color: var(--vt-c-white-indigo);             
-    
+    border-color: var(--vt-c-electric-indigo);             
  }
  
 .color3{ 
@@ -107,4 +128,32 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.08);
     border-radius: 4px;
     border-color: var(--vt-c-valencia);           
+}
+
+.m-2{
+    font-weight: 600;
+    font-size: 16px;
+    color: #000000;
+    align-items: center;
+}
+
+.m-1{
+    font-weight: 600;
+    font-size: 24px;
+    color: #000000;
+}
+
+/* icon colors */
+.violet{
+     color: #6A00FF;
+}
+
+.blue{
+    color: #7E9FFF;
+    border-color: var(--vt-c-electric-indigo);             
+}
+
+.gray{
+    color: #666666;
+    border-color: var(--vt-c-dim-gray);
 }
