--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,13 +4,12 @@
 @import './css/typography.css';
 @import './css/color-iconography.css';
 @import './css/modal.css';
-@import './css/components-button.css';
 
 
-#app {
-  width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * 0.5);
-  padding-left: calc(var(--bs-gutter-x) * 0.5);
-  margin-right: auto;
-  margin-left: auto;
+@font-face {
+  font-family: 'Poppins';
+  src: url(../assets/font_styles/Poppins-Regular.ttf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+
 }
