--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -4,16 +4,13 @@
     align-items: flex-start;
     padding: 10px 0px;
     gap: 40px;
-    
     position: relative;
     width: 707px;
     height: 1211px;
-    
     background: #FFFFFF var(--vt-c-black);
     border: 1px solid #000000;
     border-radius: 4px;
     border-color: var(--vt-c-black);             
-
 }
 
 .inter{
@@ -29,7 +26,7 @@
 .h1{
     font-family: 'Gotham', sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 900;
     font-size: 32px;
     line-height: 35px;
     display: flex;
@@ -75,9 +72,8 @@
     align-items: center;    
 }
 .heading1 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto-black', sans-serif;
     font-style: normal;
-    font-weight: 700;
     font-size: 32px;
     line-height: 24px;
     display: flex;
@@ -124,13 +120,13 @@
 }
 .heading5{
     font-family: 'Roboto', sans-serif;  
-    font-weight: 700;
     font-size: 14px;
+    font-weight: 700;
     line-height: 16px;
     display: flex;
     align-items: center;
     color: #000000;
-    border-color: var(--vt-c-black);             
+    border-color: var(--vt-c-black); 
 }
 
 .font-style-roboto-p1{
