--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,12 +4,25 @@
 @import './css/typography.css';
 @import './css/color-iconography.css';
 @import './css/modal.css';
-
+@import './css/licensekey-issue.css';
 
 @font-face {
   font-family: 'Poppins';
   src: url(../assets/font_styles/Poppins-Regular.ttf) format(truetype); 
   font-weight: normal;
   font-style: normal;
+}
 
+@font-face {
+  font-family: 'Roboto';
+  src: url(../assets/font_styles/Roboto-Regular.ttf) format(truetype); 
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto-black';
+  src: url(../assets/font_styles/Roboto-Black.ttf) format(truetype); 
+  font-weight: 900;
+  font-style: normal;
 }
